@@ -100,8 +100,9 @@ sub test_interfaces
 # &xst_debug_print_struct ($tree);
 
 $model = &xst_xml_model_scan ("/etc/alchemist/namespace/printconf/local.adl");
-&xst_xml_model_ensure ($model, "/adm_context/datatree/printconf/print_queues/lpnew/faan/pekk/fette/");
-&xst_xml_model_remove ($model, "/adm_context/datatree/printconf/print_queues/", "lpekk");
+$branch = &xst_xml_model_find ($model, "/adm_context/datatree/");
+&xst_xml_model_set_pcdata ($branch, "FAAN");
+&xst_xml_model_set_attribute ($branch, "Jern", "Jepp");
 print &xst_xml_model_print ($model);
 
 # print &xst_parse_xml ("/etc/alchemist/namespace/printconf/local.adl",
